--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -69,12 +69,7 @@
 
         <div class = "footer_div">  
            <p class="copyright text-muted">
-            Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Theme by <a href="http://www.wencongfu.com">小聪哥</a> |
-            <iframe
-                style="margin-left: 2px; margin-bottom:-5px;"
-                frameborder="0" scrolling="0" width="91px" height="20px"
-                src="https://ghbtns.com/github-btn.html?user=kabuqinuofu&repo=kabuqinuofu.github.io&type=star&count=true" >
-            </iframe>
+            Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Theme by <a href="http://www.wencongfu.com">小聪哥</a>
             </p>
         	<div align="right">
     			<link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css">
